--- a/index.html
+++ b/index.html
@@ -77,13 +77,14 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
-    };
+   const firebaseConfig = {
+  apiKey: "AIzaSyAHrY_6j3Fq6nSE5fXxN0HjcR-2WGSUmJo",
+  authDomain: "fichinhaderpgzinho.firebaseapp.com",
+  projectId: "fichinhaderpgzinho",
+  storageBucket: "fichinhaderpgzinho.appspot.com",
+  messagingSenderId: "494160373498",
+  appId: "1:494160373498:web:823af938911f657700cb43"
+};
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
